<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".views.JokesFragment">

    <TextView
        android:id="@+id/tv_joke_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/joke_list_title"
        android:textSize="@dimen/main_title_font_size"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="40dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/jokes_list_view"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@id/tv_joke_list_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_button_box"
        />


    <ProgressBar
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_button_box"
        android:id="@+id/loadingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progress="25"/>


    <LinearLayout
        android:id="@+id/ll_button_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        >

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="1dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_load_ten_jokes_button"
            android:layout_width="@dimen/action_button_width"
            android:layout_height="@dimen/action_button_height"
            android:background="@drawable/shape_action_button"
            android:text="@string/joke_list_button_refresh"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            />

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="1dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_clear_jokes_favorite_button"
            android:layout_width="@dimen/action_button_width"
            android:layout_height="@dimen/action_button_height"
            android:background="@drawable/shape_action_button"
            android:text="@string/joke_list_button_favorites"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
        />

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="1dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>